# robomastr

./: .gitignore  CLAUDE.md  README.md  gimbal.py  info.md  led.py  rm_direct_connection_sdk.py  start.md  test_camera.py  test_connection_dji.py  test_gimbal.py  test_gimbal_simple.py  test_led.py  test_robot.py
.agents/: prd.md
commands/: commit.md  planning.md
docs/: PROJECT_CONTEXT.md  fehler.md
examples/: dji_sdk_basic.py  robomasterpy_basic.py  robomasterpy_simple_controller.py  test_connection.py
frontend/src/components/: ConnectionPanel.tsx  DiagnosticsPanel.tsx  VideoFeed.tsx
frontend/src/lib/: api.ts
old/: EXERCISE_1.md  EXERCISE_1_SOLUTION.md  prompt.md  prompt2.md
plans/: s1-web-control-interface.md
reference/: API_guide.md  frontend_component_guide.md  go_robomaster_guide.md  guide.md  multi_tenant_robot_control_guide.md  robomaster-s1-connection-guide.md  robomaster_control_guide.md  robomaster_s1_agent_briefing.md  robomaster_s1_control_guide.md  robomasterpy_guide.md  robot_tool_guide.md  s1_python_sdk_control_guide.md  s1_sdk_commands.md
robot-bridge/: README_DIRECT_MODE.md  USB_SETUP.md  pyproject.toml  requirements.txt  setup_usb_linux.sh  test_connection.py  test_robot.py  test_simple.py  web_interface.py
robot-bridge/app/: __init__.py  config.py  direct_controller.py  logging.py  main.py  robot.py  simple_controller.py  usb_controller.py  video.py
robot-bridge/examples/: usb_connection.py
robot-bridge/tests/: __init__.py  conftest.py  test_api.py  test_robot_controller.py  test_video_streamer.py
(+1 files in other folders)
